force-app/main/default/objects/Order_Change__c/fields/Billed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Billed_Amount__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>