force-app/main/default/objects/Order_Change__c/fields/New_Account__c.field-meta.xml
<CustomField>
    <fullName>New_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Order Changes (New Account)</relationshipLabel>
    <relationshipName>Order_Changes1</relationshipName>
    <type>Lookup</type>
</CustomField>