force-app/main/default/objects/Order_Change__c/fields/New_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>New_PO_Number__c</fullName>
    <label>PO Number - New</label>
    <length>50</length>
    <type>Text</type>
</CustomField>