force-app/main/default/objects/Order_Change__c/fields/Payment_terms_New__c.field-meta.xml
<CustomField>
    <fullName>Payment_terms_New__c</fullName>
    <label>Payment terms - New</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SBQQ__PaymentTerm</valueSetName>
    </valueSet>
</CustomField>