force-app/main/default/objects/Order_Change__c/fields/Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Reason_Code__c</fullName>
    <label>Reason Code</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Information Update from Sales</fullName>
            </value>
            <value>
                <fullName>Information Update from Client Ops</fullName>
            </value>
            <value>
                <fullName>Discrepancy Identification - Order Management</fullName>
            </value>
            <value>
                <fullName>Discrepancy Identification - Billing &amp; Collections</fullName>
            </value>
            <value>
                <fullName>Discrepancy Identification - ARM</fullName>
            </value>
            <value>
                <fullName>Contract Terms Changed</fullName>
            </value>
            <value>
                <fullName>Standalone Credit</fullName>
            </value>
            <value>
                <fullName>Information Update from Collections</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>