force-app/main/default/objects/Order_Change__c/listViews/Billing_Ops_Order_Change1.listView-meta.xml
<ListView>
    <fullName>Billing_Ops_Order_Change1</fullName>
    <filterScope>Queue</filterScope>
    <label>Billing Ops</label>
    <queue>Billing_Ops</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>