force-app/main/default/objects/Order_Change__c/listViews/Contract_Ops_Order_Order_Change1.listView-meta.xml
<ListView>
    <fullName>Contract_Ops_Order_Order_Change1</fullName>
    <filterScope>Queue</filterScope>
    <label>Contract Ops - Order</label>
    <queue>Contract_Ops_Order</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>