force-app/main/default/objects/Order_Change__c/listViews/Order_Management_Team_Order_Change1.listView-meta.xml
<ListView>
    <fullName>Order_Management_Team_Order_Change1</fullName>
    <filterScope>Queue</filterScope>
    <label>Order Management Team</label>
    <queue>Order_Management_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>