force-app/main/default/objects/Order_Change__c/listViews/Order_Management_View.listView-meta.xml
<ListView>
    <fullName>Order_Management_View</fullName>
    <columns>NAME</columns>
    <columns>Order__c</columns>
    <columns>Old_PO_Number__c</columns>
    <columns>New_PO_Number__c</columns>
    <columns>Old_Invoicing_Contact__c</columns>
    <columns>New_Invoicing_Contact__c</columns>
    <columns>Reason_Code__c</columns>
    <columns>Order_Change_Status__c</columns>
    <columns>Order_Change_URL__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Order Management View</label>
    <language>en_US</language>
</ListView>